--- a/wally.toml
+++ b/wally.toml
@@ -1,3 +1,4 @@
+#:schema https://raw.githubusercontent.com/magicsorafish/json-schema/refs/heads/main/upliftgames/wally.schema.json
 [package]
 private = true
 name = "gituser/repos"
@@ -5,7 +6,7 @@ description = ""
 version = "0.1.0"
 license = "MIT"
 author = []
-realm = "shared|server"
+realm = "shared"
 registry = "https://github.com/UpliftGames/wally-index"
 homepage = ""
 # include = []
