Update file exclusion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,23 +54,26 @@
   },
   "typescript.tsc.autoDetect": "off",
   "files.exclude": {
-    "node_modules": false,
-    "include": false,
     ".github": false,
-    "sourcemap.json": false,
-    "selene.toml": false,
-    "stylua.toml": false,
-    ".styluaignore": false,
-    "tsconfig.json": false,
-    "package-lock.json": false,
-    "moonwave.toml": false,
     "blog": false,
     "docs": false,
+    "include": false,
+    "node_modules": false,
+    ".luaurc": false,
     ".prettierignore": false,
     ".prettierrc": false,
-    ".eslintrc": false,
-    ".luaurc": false,
-    "asphalt.lock.toml": false
+    ".stylua.toml": false,
+    ".styluaignore": false,
+    "asphalt.lock.toml": false,
+    "LICENSE": false,
+    "package-lock.json": false,
+    "README.md": false,
+    "robloxfix.yml": false,
+    "rokit.toml": false,
+    "selene.toml": false,
+    "sourcemap.json": false,
+    "moonwave.toml": false,
+    "tsconfig.json": false
   },
   "taskManager.exclude": "^__"
 }
