--- a/.github/workflows/stylua.yaml
+++ b/.github/workflows/stylua.yaml
@@ -11,6 +11,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jobs:
   stylua:
+    name: stylua
     permissions:
       contents: write
     runs-on: ubuntu-22.04
