--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "chat.disableAIFeatures": true,
   "luau-lsp.plugin.enabled": true,
   "[luau]": {
     "editor.defaultFormatter": "JohnnyMorganz.stylua",
